@startuml Forgot Password
skinparam classAttributeIconSize 0

package "API" {
    class AuthController {
        +ForgotPassword(command: ForgotPasswordCommand): Task<IActionResult>
    }
}

package "Application" {
    class ForgotPasswordCommand {
        +Email: string
    }

    class ForgotPasswordCommandHandler {
        -identityService: IIdentityService
        +Handle(request: ForgotPasswordCommand): Task<ErrorOr<Success>>
    }

    interface IIdentityService {
        +ForgotPassword(request: ForgotPasswordRequest): Task<ErrorOr<Success>>
    }
}

package "Infrastructure" {
    class IdentityService {
        -userRepository: IUserRepository
        -mailRepository: IMailRepository
        -resetTokenRepository: IPasswordResetTokenRepository
        +ForgotPassword(request: ForgotPasswordRequest): Task<ErrorOr<Success>>
    }
}

package "Domain" {
    class PasswordResetTokenEntity {
        +Id: Guid
        +UserId: Guid
        +Token: string
        +Expiry: DateTimeOffset
    }

    class MailEntity {
        +To: string
        +Subject: string
        +Body: string
    }
}

AuthController ..> ForgotPasswordCommand : uses
ForgotPasswordCommand ..> ForgotPasswordCommandHandler : handled by
ForgotPasswordCommandHandler --> IIdentityService : calls
IIdentityService <|.. IdentityService : implements
IdentityService ..> PasswordResetTokenEntity : creates
IdentityService ..> MailEntity : creates
@enduml
